cmake_minimum_required(VERSION 3.3)
project(logcabin)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(".")
include_directories("include/")

set(SOURCE_FILES
    Client/Backoff.cc
    Client/Backoff.h
    Client/BackoffTest.cc
    Client/Client.cc
    Client/ClientImpl.cc
    Client/ClientImpl.h
    Client/ClientImplTest.cc
    Client/ClientTest.cc
    Client/LeaderRPC.cc
    Client/LeaderRPC.h
    Client/LeaderRPCMock.cc
    Client/LeaderRPCMock.h
    Client/LeaderRPCTest.cc
    Client/MockClientImpl.cc
    Client/MockClientImpl.h
    Client/MockClientImplTest.cc
    Client/ServerControl.cc
    Client/SessionManager.cc
    Client/SessionManager.h
    Client/SessionManagerTest.cc
    Client/Util.cc
    Client/UtilTest.cc
    Core/Buffer.cc
    Core/Buffer.h
    Core/BufferTest.cc
    Core/Checksum.cc
    Core/Checksum.h
    Core/ChecksumTest.cc
    Core/CompatAtomic.h
    Core/CompatHash.h
    Core/CompatHashTest.cc
    Core/ConditionVariable.cc
    Core/ConditionVariable.h
    Core/ConditionVariableTest.cc
    Core/Config.cc
    Core/Config.h
    Core/ConfigTest.cc
    Core/Debug.cc
    Core/Debug.h
    Core/DebugTest.cc
    Core/Endian.h
    Core/Mutex.h
    Core/ProtoBuf.cc
    Core/ProtoBuf.h
    Core/ProtoBufTest.cc
    Core/Random.cc
    Core/Random.h
    Core/RandomTest.cc
    Core/RollingStat.cc
    Core/RollingStat.h
    Core/RollingStatTest.cc
    Core/STLUtil.h
    Core/STLUtilTest.cc
    Core/StringUtil.cc
    Core/StringUtil.h
    Core/StringUtilTest.cc
    Core/ThreadId.cc
    Core/ThreadId.h
    Core/ThreadIdTest.cc
    Core/Time.cc
    Core/Time.h
    Core/TimeTest.cc
    Core/Util.cc
    Core/Util.h
    Core/UtilTest.cc
    Event/File.cc
    Event/File.h
    Event/FileTest.cc
    Event/Loop.cc
    Event/Loop.h
    Event/LoopTest.cc
    Event/Signal.cc
    Event/Signal.h
    Event/SignalTest.cc
    Event/Timer.cc
    Event/Timer.h
    Event/TimerTest.cc
    Examples/Benchmark.cc
    Examples/FailoverTest.cc
    Examples/HelloWorld.cc
    Examples/Reconfigure.cc
    Examples/ReconfigureTest.cc
    Examples/SmokeTest.cc
    Examples/TreeOps.cc
    gtest/codegear/gtest_all.cc
    gtest/codegear/gtest_link.cc
    gtest/include/gtest/internal/gtest-death-test-internal.h
    gtest/include/gtest/internal/gtest-filepath.h
    gtest/include/gtest/internal/gtest-internal.h
    gtest/include/gtest/internal/gtest-linked_ptr.h
    gtest/include/gtest/internal/gtest-param-util-generated.h
    gtest/include/gtest/internal/gtest-param-util.h
    gtest/include/gtest/internal/gtest-port.h
    gtest/include/gtest/internal/gtest-string.h
    gtest/include/gtest/internal/gtest-tuple.h
    gtest/include/gtest/internal/gtest-type-util.h
    gtest/include/gtest/gtest-death-test.h
    gtest/include/gtest/gtest-message.h
    gtest/include/gtest/gtest-param-test.h
    gtest/include/gtest/gtest-printers.h
    gtest/include/gtest/gtest-spi.h
    gtest/include/gtest/gtest-test-part.h
    gtest/include/gtest/gtest-typed-test.h
    gtest/include/gtest/gtest.h
    gtest/include/gtest/gtest_pred_impl.h
    gtest/include/gtest/gtest_prod.h
    gtest/samples/prime_tables.h
    gtest/samples/sample1.cc
    gtest/samples/sample1.h
    gtest/samples/sample10_unittest.cc
    gtest/samples/sample1_unittest.cc
    gtest/samples/sample2.cc
    gtest/samples/sample2.h
    gtest/samples/sample2_unittest.cc
    gtest/samples/sample3-inl.h
    gtest/samples/sample3_unittest.cc
    gtest/samples/sample4.cc
    gtest/samples/sample4.h
    gtest/samples/sample4_unittest.cc
    gtest/samples/sample5_unittest.cc
    gtest/samples/sample6_unittest.cc
    gtest/samples/sample7_unittest.cc
    gtest/samples/sample8_unittest.cc
    gtest/samples/sample9_unittest.cc
    gtest/src/gtest-all.cc
    gtest/src/gtest-death-test.cc
    gtest/src/gtest-filepath.cc
    gtest/src/gtest-internal-inl.h
    gtest/src/gtest-port.cc
    gtest/src/gtest-printers.cc
    gtest/src/gtest-test-part.cc
    gtest/src/gtest-typed-test.cc
    gtest/src/gtest.cc
    gtest/src/gtest_main.cc
    gtest/test/gtest-death-test_ex_test.cc
    gtest/test/gtest-death-test_test.cc
    gtest/test/gtest-filepath_test.cc
    gtest/test/gtest-linked_ptr_test.cc
    gtest/test/gtest-listener_test.cc
    gtest/test/gtest-message_test.cc
    gtest/test/gtest-options_test.cc
    gtest/test/gtest-param-test2_test.cc
    gtest/test/gtest-param-test_test.cc
    gtest/test/gtest-param-test_test.h
    gtest/test/gtest-port_test.cc
    gtest/test/gtest-printers_test.cc
    gtest/test/gtest-test-part_test.cc
    gtest/test/gtest-tuple_test.cc
    gtest/test/gtest-typed-test2_test.cc
    gtest/test/gtest-typed-test_test.cc
    gtest/test/gtest-typed-test_test.h
    gtest/test/gtest-unittest-api_test.cc
    gtest/test/gtest_all_test.cc
    gtest/test/gtest_break_on_failure_unittest_.cc
    gtest/test/gtest_catch_exceptions_test_.cc
    gtest/test/gtest_color_test_.cc
    gtest/test/gtest_env_var_test_.cc
    gtest/test/gtest_environment_test.cc
    gtest/test/gtest_filter_unittest_.cc
    gtest/test/gtest_help_test_.cc
    gtest/test/gtest_list_tests_unittest_.cc
    gtest/test/gtest_main_unittest.cc
    gtest/test/gtest_nc.cc
    gtest/test/gtest_no_test_unittest.cc
    gtest/test/gtest_output_test_.cc
    gtest/test/gtest_pred_impl_unittest.cc
    gtest/test/gtest_prod_test.cc
    gtest/test/gtest_repeat_test.cc
    gtest/test/gtest_shuffle_test_.cc
    gtest/test/gtest_sole_header_test.cc
    gtest/test/gtest_stress_test.cc
    gtest/test/gtest_throw_on_failure_ex_test.cc
    gtest/test/gtest_throw_on_failure_test_.cc
    gtest/test/gtest_uninitialized_test_.cc
    gtest/test/gtest_unittest.cc
    gtest/test/gtest_xml_outfile1_test_.cc
    gtest/test/gtest_xml_outfile2_test_.cc
    gtest/test/gtest_xml_output_unittest_.cc
    gtest/test/production.cc
    gtest/test/production.h
    gtest/xcode/Samples/FrameworkSample/widget.cc
    gtest/xcode/Samples/FrameworkSample/widget.h
    gtest/xcode/Samples/FrameworkSample/widget_test.cc
    include/LogCabin/Client.h
    include/LogCabin/Debug.h
    include/LogCabin/Util.h
    Protocol/Common.h
    Protocol/Client.proto
    Protocol/Raft.proto
    Protocol/RaftLogMetadata.proto
    Protocol/ServerControl.proto
    Protocol/ServerStats.proto
    RPC/Address.cc
    RPC/Address.h
    RPC/AddressTest.cc
    RPC/ClientRPC.cc
    RPC/ClientRPC.h
    RPC/ClientRPCTest.cc
    RPC/ClientServerTest.cc
    RPC/ClientSession.cc
    RPC/ClientSession.h
    RPC/ClientSessionTest.cc
    RPC/MessageSocket.cc
    RPC/MessageSocket.h
    RPC/MessageSocketTest.cc
    RPC/OpaqueClientRPC.cc
    RPC/OpaqueClientRPC.h
    RPC/OpaqueClientRPCTest.cc
    RPC/OpaqueServer.cc
    RPC/OpaqueServer.h
    RPC/OpaqueServerRPC.cc
    RPC/OpaqueServerRPC.h
    RPC/OpaqueServerRPCTest.cc
    RPC/OpaqueServerTest.cc
    RPC/Protocol.cc
    RPC/Protocol.h
    RPC/Server.cc
    RPC/Server.h
    RPC/ServerRPC.cc
    RPC/ServerRPC.h
    RPC/ServerRPCTest.cc
    RPC/ServerTest.cc
    RPC/Service.h
    RPC/ServiceMock.cc
    RPC/ServiceMock.h
    RPC/ThreadDispatchService.cc
    RPC/ThreadDispatchService.h
    RPC/ThreadDispatchServiceTest.cc
    Server/ClientService.cc
    Server/ClientService.h
    Server/ClientServiceTest.cc
    Server/ControlService.cc
    Server/ControlService.h
    Server/Globals.cc
    Server/Globals.h
    Server/GlobalsTest.cc
    Server/Main.cc
    Server/RaftConsensus.cc
    Server/RaftConsensus.h
    Server/RaftConsensusInvariants.cc
    Server/RaftConsensusTest.cc
    Server/RaftService.cc
    Server/RaftService.h
    Server/ServerStats.cc
    Server/ServerStats.h
    Server/ServerStatsTest.cc
    Server/StateMachine.cc
    Server/StateMachine.h
    Server/StateMachineTest.cc
    Storage/FilesystemUtil.cc
    Storage/FilesystemUtil.h
    Storage/FilesystemUtilTest.cc
    Storage/Layout.cc
    Storage/Layout.h
    Storage/LayoutTest.cc
    Storage/Log.cc
    Storage/Log.h
    Storage/LogFactory.cc
    Storage/LogFactory.h
    Storage/LogFactoryTest.cc
    Storage/MemoryLog.cc
    Storage/MemoryLog.h
    Storage/MemoryLogTest.cc
    Storage/SegmentedLog.cc
    Storage/SegmentedLog.h
    Storage/SegmentedLogTest.cc
    Storage/SimpleFileLog.cc
    Storage/SimpleFileLog.h
    Storage/SimpleFileLogTest.cc
    Storage/SnapshotFile.cc
    Storage/SnapshotFile.h
    Storage/SnapshotFileTest.cc
    Storage/Tool.cc
    test/TestRunner.cc
    Tree/ProtoBuf.cc
    Tree/ProtoBuf.h
    Tree/ProtoBufTest.cc
    Tree/Tree.cc
    Tree/Tree.h
    Tree/TreeTest.cc)

add_executable(logcabin ${SOURCE_FILES})